[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
{%- if cookiecutter.variant != "None (Skip)" %}
name = "{{cookiecutter.variant}}-{{cookiecutter.mapper_id}}"
{%- else %}
name = "{{cookiecutter.mapper_id}}"
{%- endif %}
dynamic = ["version"]
description = "Singer mapper {{cookiecutter.name}}, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "{{ cookiecutter.admin_name }}", email = "{{ cookiecutter.admin_email }}" }]
keywords = [
    "ELT",
    "Mapper",
    "{{cookiecutter.name}}",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
{%- if cookiecutter.license != "None" %}
license = "{{cookiecutter.license}}"
{%- endif %}
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    {%- if cookiecutter.faker_extra %}
    "singer-sdk[faker]~=0.53.6",
    {%- else %}
    "singer-sdk~=0.53.6",
    {%- endif %}
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
{{cookiecutter.mapper_id}} = '{{cookiecutter.library_name}}.mapper:{{cookiecutter.name}}Mapper.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    {%- if cookiecutter.include_ci_files == "GitHub" %}
    "pytest-github-actions-annotate-failures>=0.4",
    {%- endif %}
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
]

{%- if cookiecutter.variant != "None (Skip)" %}
[tool.hatch.build.targets.wheel]
packages = [
    "{{cookiecutter.library_name}}",
]
{%- endif %}

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "typing",
    { product = [
        { prefix = "3.", start = 10 },
    ] },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    {%- if cookiecutter.include_ci_files == "GitHub" %}
    "GITHUB_*",
    {%- endif %}
    "{{cookiecutter.mapper_id.replace('-', '_').upper()}}_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "{{cookiecutter.library_name}}", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "{{cookiecutter.library_name}}", "tests" ], extend = true } ],
]
