[tool.poetry]
name = "{{cookiecutter.tap_id}}"
version = "0.0.1"
description = "`{{cookiecutter.tap_id}}` is Singer-compliant {{cookiecutter.source_name}} tap built with Singer SDK."
authors = ["{{ cookiecutter.admin_name }}"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
# Note: Until we clear the first non-prerelease, `singer-sdk` need to be pinned to a specific version.
#       For a list of released versions: https://pypi.org/project/singer-sdk/#history
#       To safely update the version number: `poetry add singer-sdk==0.0.2-dev.1068770959`
singer-sdk = "0.0.2-dev.1068770959"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
{{cookiecutter.tap_id}} = '{{cookiecutter.library_name}}.tap:cli'
