{%- set extras = [] -%}
{%- if cookiecutter.faker_extra -%}{%- set extras = extras + ["faker"] -%}{%- endif -%}
{%- if cookiecutter.auth_method == "JWT" -%}{%- set extras = extras + ["jwt"] -%}{%- endif -%}

[project]
{%- if cookiecutter.variant != "None (Skip)" %}
name = "{{cookiecutter.variant}}-{{cookiecutter.tap_id}}"
{%- else %}
name = "{{cookiecutter.tap_id}}"
{%- endif %}
version = "0.0.1"
description = "Singer tap for {{cookiecutter.source_name}}, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "{{ cookiecutter.admin_name }}", email = "{{ cookiecutter.admin_email }}" }]
keywords = [
    "ELT",
    "{{cookiecutter.source_name}}",
]
classifiers = [
    "Intended Audience :: Developers",
{%- if cookiecutter.license == "Apache-2.0" %}
    "License :: OSI Approved :: Apache Software License",
{%- endif %}
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
{%- if cookiecutter.license != "None" %}
license = "{{cookiecutter.license}}"
{%- endif %}
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    {%- if extras %}
    "singer-sdk[{{ extras|join(',') }}]~=0.47.1",
    {%- else %}
    "singer-sdk~=0.47.1",
    {%- endif %}
    {%- if cookiecutter.stream_type in ["REST", "GraphQL"] %}
    "requests~=2.32.3",
    {%- endif %}
    {%- if cookiecutter.stream_type == "SQL" %}
    "sqlalchemy~=2.0.36",
    {%- endif %}
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.5.0",
]

[project.scripts]
# CLI declaration
{{cookiecutter.tap_id}} = '{{cookiecutter.library_name}}.tap:Tap{{cookiecutter.source_name}}.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    {%- if cookiecutter.include_ci_files == "GitHub" %}
    "pytest-github-actions-annotate-failures>=0.3",
    {%- endif %}
    "singer-sdk[testing]",
]

{%- if cookiecutter.variant != "None (Skip)" %}
[tool.hatch.build.targets.wheel]
packages = [
    "{{cookiecutter.library_name}}",
]
{%- endif %}

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true
{#- TODO: Remove this after support for SQLAlchemy 1 is dropped in v1 -#}
{#- https://github.com/meltano/sdk/pull/1931 -#}
{%- if cookiecutter.stream_type == 'SQL' %}
plugins = "sqlmypy"
{%- endif %}

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

# This configuration can be used to customize tox tests as well as other test frameworks like flake8 and mypy
[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "py313",
    "py312",
    "py311",
    "py310",
    "py39",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    {%- if cookiecutter.include_ci_files == "GitHub" %}
    "GITHUB_*",
    {%- endif %}
    "{{cookiecutter.tap_id.replace('-', '_').upper()}}_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
