[tool.poetry]
name = "{{cookiecutter.target_id}}"
version = "0.0.1"
description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano SDK for Singer Targets."
authors = ["{{ cookiecutter.admin_name }}"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
{{cookiecutter.target_id}} = '{{cookiecutter.library_name}}.tap:cli'
